fix ENV